# os

./: .gitignore  README.md
lab1/: .gitignore  CMakeLists.txt
lab1/scripts/: build.cmd  build.sh
lab2/: CMakeLists.txt
lab2/lib/process_lib/: CMakeLists.txt
lab2/lib/process_lib/include/: process_lib.h
lab2/lib/process_lib/src/: process_lib_unix.cpp  process_lib_win.cpp
lab2/scripts/: build.cmd  build.sh
lab2/test/: test.cpp
lab4/: CMakeLists.txt  README.md  build.cmd  build.sh
lab4/src/: serial_port_unix.cpp  temp_monitor.cpp  temp_sensor.cpp
lab5/: CMakeLists.txt  README.md  build.cmd  build.sh
lab5/frontend/: package-lock.json  package.json
lab5/frontend/public/: index.html
lab5/frontend/src/: App.tsx  api.ts  index.tsx  types.ts
lab5/frontend/src/components/: TemperatureChart.tsx
lab5/include/: api_handler.h  db_manager.h  http_server.h  http_session.h  serial_port.h
lab5/src/: api_handler.cpp  db_manager.cpp  http_server.cpp  http_session.cpp  serial_port_unix.cpp  serial_port_win.cpp  temp_monitor.cpp
